--- a/responsive.css
+++ b/responsive.css
@@ -8,7 +8,7 @@
 
   /**** ---- NAVIGATION ---- *****/ 
 
-  .link {
+  .menu {
     font-size: 30px;
   }
 
@@ -20,9 +20,6 @@
   }
 
   .project-area {
-    display: flex;
-    width: 100%;
-    justify-content: center;
     background-color: var(--beige);
     padding: 30px 0 30px 0;
   }
@@ -30,10 +27,14 @@
   .project {
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 var(--shadowDark), 0 6px 16px 0 var(--shadowLight);
-    height: 400px;
     margin: 30px 20px;
-    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 400px;
+    max-height: 400px;
     min-width: 550px;
+    max-width: 550px;
+    position: relative;
   }
   
   .front {
@@ -41,12 +42,16 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
+    position: absolute;
   }
   
   .front > img {
     height: 300px;
     border-radius: 15px 15px 0 0;
     border-bottom: 1px solid var(--onyx);
+    border-right: none;
+    border-top: none;
+    border-left: none;
   }
   
   .front > h3 {
@@ -62,15 +67,6 @@
   }
 
   .overlay {
-    background-color: var(--white);
-    border-radius: 0px;
-    min-height: 100%;
-    opacity: 1;
-    position: relative;
-    max-width: 100%;
-  }
-
-  .overlay {
     border-radius: 15px;
     height: 100%;
     inset: 0;
@@ -78,6 +74,7 @@
     position: absolute;
     transition: 0.5s ease;
     width: 100%;
+    background-color: var(--white);
   }
   
   .project:hover .overlay {
@@ -97,40 +94,7 @@
   }
   
   .buttons {
-    display: flex;
-    justify-content: space-around;
     margin-top: 15px;
-  }
-  
-  button {
-    border-radius: 20px;
-    padding: 25px 40px;
-    font: 'Lato', sans-serif;
-    cursor: pointer;
-  }
-  
-  .btn-code {
-    background-color: var(--rose);
-    border: none;
-  }
-  
-  a > .btn-code {
-    text-decoration: none;
-    color: var(--white);
-  }
-  
-  button:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 16px 0 rgba(0, 0, 0, 0.19);
-  }
-  
-  .btn-demo {
-    background-color: var(--white);
-    border: 1px solid var(--rose);
-  }
-  
-  a > .btn-demo {
-    text-decoration: none;
-    color: var(--rose);
   }
 
 
