--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h2 {
   font-size: 4.5em;
   text-align: center;
   letter-spacing: -8px;
-  color: var(--onyx);
+  color: var(--rose);
   text-transform: uppercase;
 }
 
@@ -128,6 +128,23 @@ h1 {
   margin-top: 0;
   color: var(--white);
   font-size: 2em;
+}
+
+/**** ----- SKILLS ----- *****/
+ 
+.tech-icons {
+  border-bottom: none;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style-type: none;
+  padding: 0 0 30px 0;
+  margin: 0 auto;
+  font-size: 3em;
+  color: var(--onyx);
 }
 
 
