--- a/responsive.css
+++ b/responsive.css
@@ -12,21 +12,6 @@
     font-size: 30px;
   }
 
-  /**** ----- SKILLS ----- ****/
-
-  #skills-wrapper {
-    margin: 0;
-    padding: 50px 0 50px 0;
-  }
-
-  .tech-skills {
-    padding-top: 50px;
-  }
-
-  .tech-icons {
-    font-size: 4em;
-  }
-
   /***** ---- PROJECTS ---- *****/
 
   #project-wrapper {
@@ -38,6 +23,7 @@
 
   #project-wrapper h2 {
     color: var(--onyx);
+    margin-bottom: -10px;
   }
 
   .project-area {
@@ -121,6 +107,10 @@
 
  /***** ABOUT *****/
 
+  #about-wrapper {
+    margin: 0 auto;
+  }
+
   #about-wrapper > h2 {
     margin: 60px 0 20px 0;
   }
@@ -189,6 +179,22 @@
     width: 100%;
   }
 }
+ 
+/**** ----- SKILLS ----- ****/
+
+#skills-wrapper {
+  margin: 0;
+  padding: -50px 0 30px 0;
+}
+
+.tech-skills {
+  padding-bottom: -20px;
+}
+
+.tech-icons {
+  font-size: 4em;
+}
+
 
 @media (min-width: 1200px) { 
   
@@ -201,6 +207,11 @@
   #project-wrapper {
     background-color: var(--beige);
     padding-top: 40px;
+  }
+
+  .project-area {
+    background-color: var(--beige);
+    padding: 30px 0 30px 0;
   }
 
   .about > img {
@@ -228,5 +239,17 @@
   footer {
     display: flex;
     flex-wrap: wrap;
+  }
+
+  #skills-wrapper {
+    margin: 50px 0 50px 0;
+  }
+
+  #skills-wrapper h2 {
+    padding-bottom: 100px;
+  }
+
+  .tech-icons li {
+    font-size: 1.2em;
   }
 }
