--- a/responsive.css
+++ b/responsive.css
@@ -121,7 +121,7 @@
  }
 
  .about > h3 {
-  font: 'Josefin Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 3em;
   text-align: center;
   color: var(--onyx);
@@ -144,7 +144,7 @@
   }
 
   footer #footer-wrapper {
-    width: 65%;
+    width: 70%;
     margin: 50px 0;
   }
 
@@ -170,6 +170,10 @@
     line-height: 1.285;
   }
 
+  .social {
+    margin-top: -250px;
+  }
+
   footer .social-icons {
     width: 12.5em;
     justify-content: space-between;
@@ -184,11 +188,7 @@
 
 #skills-wrapper {
   margin: 0;
-  padding: -50px 0 30px 0;
-}
-
-.tech-skills {
-  padding-bottom: -20px;
+  padding: 0px 0 30px 0;
 }
 
 .tech-icons {
@@ -236,11 +236,6 @@
     text-align: left;
   }
 
-  footer {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
   #skills-wrapper {
     margin: 50px 0 50px 0;
   }
@@ -251,5 +246,14 @@
 
   .tech-icons li {
     font-size: 1.2em;
+  }
+
+  footer #footer-wrapper {
+    width: 60%;
+    margin: 50px 0;
+  }
+
+  footer .social-icons p {
+    font-size: 2.3em;
   }
 }
