--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
   font-size: 16px;
   scroll-padding-top: 100px;
   scroll-behavior: smooth;
+  font-family: 'Lato', sans-serif;
 }
 
 * {
@@ -22,17 +23,17 @@ html {
 }
 
 body {
-  background-color: var(white);
+  background-color: var(--white);
   margin: 0;
   padding: 0;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 h2 {
-  font: 'Josefin Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 4.5em;
   text-align: center;
-  letter-spacing: -8px;
+  letter-spacing: -6px;
   color: var(--rose);
   text-transform: uppercase;
 }
@@ -164,7 +165,7 @@ h1 {
 }
 
 .about > h3 {
-  font: 'Josefin Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 2em;
   text-align: center;
   color: var(--onyx);
@@ -220,7 +221,7 @@ h1 {
 }
 
 h3 {
-  font: 100 26px 'Josefin Sans', sans-serif;
+  font: 100 26px 'Lato', sans-serif;
   padding: 20px 0;
   text-align: center;
   color: var(--onyx);
@@ -309,7 +310,7 @@ footer {
 }
 
 footer h4 {
-  font: 'Josefin Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 2em;
   letter-spacing: -2px;
   color: var(--onyx);
@@ -319,11 +320,28 @@ footer h4 {
 footer p {
   margin: 0;
   font-size: 1.2em;
-  line-height: 2.5;
+  line-height: 3;
 }
 
-address {
-  font-style: normal;
+input[type=text], select {
+  width: 80%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 80%;
+  background-color: var(--rose);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 footer .content-wrapper {
@@ -344,12 +362,12 @@ footer .social-icons {
 footer .social-icons p {
   background-color: var(--white);
   border-radius: 100%;
-  width: 50px;
-  height: 50px;
+  width: 75px;
+  height: 75px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.6em;
+  font-size: 2em;
 }
 
 footer .social-icons p i {
